welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var tab= new Array[Color](i)
	def remplirTab(taille:Int):Array[Color] {for (i<-0 to taille-1) {getCouleurSol()}}
	remplirTab() 
}
